switched to a separate js file for device sharing as it was throwing errors moved device share css out of main css file. Also, not clear if we are still making changes via Sass, as main.scss was compiling to main.css, but style.css is being used. added some mobile styles and fixed typography issues added missing content, fixed links added max to credits added a blank banner image and fcc logo as separate image

--- a/device-sharing/devices.html
+++ b/device-sharing/devices.html
@@ -17,6 +17,7 @@
 
     <title>Ceti: A Creative and Emergent Technology Institute</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/fcc.css">
 </head>
 
 <body class="device-page">
@@ -25,6 +26,7 @@
             <div class="hamburger"></div>
         </div>
         <div class="menu-mobile">
+            <a href="/index.html">CETI Home</a>
             <a href="/device-sharing/index.html" class="active">Device Sharing</a>
             <a href="/device-sharing/get-involved.html">Get Involved</a>
             <a href="/device-sharing/devices.html">Devices Needed</a>
@@ -32,6 +34,7 @@
     </nav>
     <nav class="desktop">
         <div class="menu-desktop">
+            <a href="/index.html">CETI Home</a>
             <a href="/device-sharing/index.html" class="active">Device Sharing</a>
             <a href="/device-sharing/get-involved.html">Get Involved</a>
             <a href="/device-sharing/devices.html">Devices Needed</a>
@@ -76,6 +79,7 @@
                 </a>
                 <!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
             </h1>
+            <img src="images/fcc-logo-white.png" alt="Fostering Connected Community Logo" class="fcc-logo"/>
         </header>
 
     </div>
@@ -180,14 +184,13 @@
                         <p>We accept any peripherals/accessories you have for your devices if they are functioning, undamaged, do not need any repair (including all relevant batteries, cords, connectors), headphones, webcams, mice, monitors, keyboards, speakers, routers, etc.</p>
                     </li>
                 </ol>
-                <p><a href="https://forms.gle/GZeWGpe8moZp48688" target='_blank' rel='noopener'>Sign up here to donate devices</a>. We will send  instructions  for how to clear all data and accounts out of the device, and to clean and prep the devices for donation.   We will hold virtual office hrs to answer ? about this process and to help you troubleshoot if you need that.  You may also reach out to us <a href="mailto:hello@ceti.institute">hello@ceti.institute</a> with any questions. </p>
+                <p><a href="https://forms.gle/ufVqkb9keLGSGxTG8" target='_blank' rel='noopener'>Sign up here to donate devices</a>. We will send  instructions  for how to clear all data and accounts out of the device, and to clean and prep the devices for donation.   We will hold virtual office hrs to answer ? about this process and to help you troubleshoot if you need that.  You may also reach out to us <a href="mailto:hello@ceti.institute">hello@ceti.institute</a> with any questions. </p>
             </div>
         </section>
 
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="libraries/parallax/parallax.min.js"></script>
-    <script src="js/script.js"></script>
+	<script src="js/device-sharing.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
     <script>
