--- a/device-sharing/get-involved.html
+++ b/device-sharing/get-involved.html
@@ -17,6 +17,7 @@
 
     <title>Ceti: A Creative and Emergent Technology Institute</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/fcc.css">
 </head>
 
 <body class="device-page">
@@ -25,6 +26,7 @@
             <div class="hamburger"></div>
         </div>
         <div class="menu-mobile">
+            <a href="/index.html">CETI Home</a>
             <a href="/device-sharing/index.html" class="active">Device Sharing</a>
             <a href="/device-sharing/get-involved.html">Get Involved</a>
             <a href="/device-sharing/devices.html">Devices Needed</a>
@@ -32,6 +34,7 @@
     </nav>
     <nav class="desktop">
         <div class="menu-desktop">
+            <a href="/index.html">CETI Home</a>
             <a href="/device-sharing/index.html" class="active">Device Sharing</a>
             <a href="/device-sharing/get-involved.html">Get Involved</a>
             <a href="/device-sharing/devices.html">Devices Needed</a>
@@ -74,6 +77,7 @@
                 </svg>
                 <!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
             </h1>
+            <img src="images/fcc-logo-white.png" alt="Fostering Connected Community Logo" class="fcc-logo"/>
         </header>
 
     </div>
@@ -99,7 +103,7 @@
                     <p>Perhaps you can even do an informal gathering of devices (from your block, community, or from
                         coworkers). Please make sure to share/follow the data removal and prepping instructions. Either have
                         each person fill out the donor form. if possible (or you can collect and fill one out for all).</p>
-                    <p><a href="https://forms.gle/GZeWGpe8moZp48688" target='_blank' rel='noopener'>Sign up here to donate
+                    <p><a href="https://forms.gle/ufVqkb9keLGSGxTG8" target='_blank' rel='noopener'>Sign up here to donate
                             devices.</a> And Thank You so much!!</p>
                     <p>We will have instructions to support the device prep and a few virtual office hrs to help you with
                         questions and the process. Please send an email with and questions to <a
@@ -164,8 +168,7 @@
 
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="libraries/parallax/parallax.min.js"></script>
-    <script src="js/script.js"></script>
+	<script src="js/device-sharing.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
     <script>
