--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		 </section>
 
 			<section class="contributors">
-			<p>The design, development, visuals, and branding for CETI were created by the following contributors: Hilary Tsai, Nyssa Oru, Stephen Lee, Mike Heavers, Alanna Risse, Scott Garner, and Sparkman.</p>
+			<p>The design, development, visuals, and branding for CETI were created by the following contributors: Hilary Tsai, Nyssa Oru, Stephen Lee, Max Ettel, Mike Heavers, Alanna Risse, Scott Garner, and Sparkman.</p>
 		</section>
 		<div id="subscribe-form" class="white-popup-block mfp-hide">
 			<!-- Begin Mailchimp Signup Form -->
