--- a/device-sharing/index.html
+++ b/device-sharing/index.html
@@ -17,67 +17,70 @@
 
 	<title>Ceti: A Creative and Emergent Technology Institute</title>
 	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="css/fcc.css">
 </head>
 
 <body class="device-page">
 	<nav class="nav">
-        <div class="icon">
-            <div class="hamburger"></div>
-        </div>
-        <div class="menu-mobile">
+		<div class="icon">
+			<div class="hamburger"></div>
+		</div>
+		<div class="menu-mobile">
 			<a href="/index.html">CETI Home</a>
-            <a href="/device-sharing/index.html" class="active">Device Sharing</a>
-            <a href="/device-sharing/get-involved.html">Get Involved</a>
-            <a href="/device-sharing/devices.html">Devices Needed</a>
-        </div>
-    </nav>
-    <nav class="desktop">
-        <div class="menu-desktop">
+			<a href="/device-sharing/index.html" class="active">Device Sharing</a>
+			<a href="/device-sharing/get-involved.html">Get Involved</a>
+			<a href="/device-sharing/devices.html">Devices Needed</a>
+		</div>
+	</nav>
+	<nav class="desktop">
+		<div class="menu-desktop">
 			<a href="/index.html">CETI Home</a>
-            <a href="/device-sharing/index.html" class="active">Device Sharing</a>
-            <a href="/device-sharing/get-involved.html">Get Involved</a>
-            <a href="/device-sharing/devices.html">Devices Needed</a>
-        </div>
-    </nav>
+			<a href="/device-sharing/index.html" class="active">Device Sharing</a>
+			<a href="/device-sharing/get-involved.html">Get Involved</a>
+			<a href="/device-sharing/devices.html">Devices Needed</a>
+		</div>
+	</nav>
 	<div class="hero">
 		<header class="branding">
 			<h1 id="logo">
 				<a href="/index.html">
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 408.265 408.265">
-					<title>CETI Institute</title>
-					<path
-						d="M274.031,273.752c31.27-13.766,72.822-18.308,180.485-23.648-107.663-5.339-149.215-9.881-180.485-23.647-13.766-31.27-18.308-72.822-23.648-180.485-5.339,107.663-9.881,149.215-23.647,180.485-31.27,13.766-72.822,18.308-180.485,23.647,107.663,5.34,149.215,9.882,180.485,23.648,13.766,31.27,18.308,72.822,23.647,180.485C255.723,346.574,260.265,305.022,274.031,273.752Z"
-						transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-					<path d="M107.824,327.02h-45.5V298.214H187.678V327.02h-45.5V450H107.824Z"
-						transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-					<path
-						d="M322.378,421.2h35.445V327.02H322.378V298.214H427.622V327.02H392.177V421.2h35.445V450H322.378Z"
-						transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-					<path
-						d="M64.943,126.5c0-50.322,31.842-79.528,72.511-79.528,19.241,0,35.025,9.187,45.286,19.305L163.829,87.529c-7.247-6.7-15.414-10.885-26.375-10.885-21.552,0-37.291,18.315-37.291,48.718,0,31.2,15.739,49.314,38.635,49.314,10.95,0,19.984-5.384,27.349-13.41l18.91,20.787c-12.383,14.646-29.371,22.294-49.8,22.294C97.521,204.347,64.943,177.689,64.943,126.5Z"
-						transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-					<path d="M323.528,49.766H424.143V78.572H357.882v30.439h56.3v28.8h-56.3v34.933h68.59v28.8H323.528Z"
-						transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-					<defs>
-						<linearGradient id="skyGradient" x1="100%" y1="100%">
-							<stop offset="0%" stop-color="lightblue" stop-opacity=".5">
-								<animate attributeName="stop-color"
-									values="lightblue;blue;red;red;black;red;red;purple;lightblue" dur="14s"
-									repeatCount="indefinite" />
-							</stop>
-							<stop offset="100%" stop-color="lightblue" stop-opacity=".5">
-								<animate attributeName="stop-color"
-									values="lightblue;orange;purple;purple;black;purple;purple;blue;lightblue" dur="14s"
-									repeatCount="indefinite" />
-								<animate attributeName="offset" values=".95;.80;.60;.40;.20;0;.20;.40;.60;.80;.95"
-									dur="14s" repeatCount="indefinite" />
-							</stop>
-						</linearGradient>
-					</defs>
-				</svg>
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 408.265 408.265">
+						<title>CETI Institute</title>
+						<path
+							d="M274.031,273.752c31.27-13.766,72.822-18.308,180.485-23.648-107.663-5.339-149.215-9.881-180.485-23.647-13.766-31.27-18.308-72.822-23.648-180.485-5.339,107.663-9.881,149.215-23.647,180.485-31.27,13.766-72.822,18.308-180.485,23.647,107.663,5.34,149.215,9.882,180.485,23.648,13.766,31.27,18.308,72.822,23.647,180.485C255.723,346.574,260.265,305.022,274.031,273.752Z"
+							transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
+						<path d="M107.824,327.02h-45.5V298.214H187.678V327.02h-45.5V450H107.824Z"
+							transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
+						<path
+							d="M322.378,421.2h35.445V327.02H322.378V298.214H427.622V327.02H392.177V421.2h35.445V450H322.378Z"
+							transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
+						<path
+							d="M64.943,126.5c0-50.322,31.842-79.528,72.511-79.528,19.241,0,35.025,9.187,45.286,19.305L163.829,87.529c-7.247-6.7-15.414-10.885-26.375-10.885-21.552,0-37.291,18.315-37.291,48.718,0,31.2,15.739,49.314,38.635,49.314,10.95,0,19.984-5.384,27.349-13.41l18.91,20.787c-12.383,14.646-29.371,22.294-49.8,22.294C97.521,204.347,64.943,177.689,64.943,126.5Z"
+							transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
+						<path
+							d="M323.528,49.766H424.143V78.572H357.882v30.439h56.3v28.8h-56.3v34.933h68.59v28.8H323.528Z"
+							transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
+						<defs>
+							<linearGradient id="skyGradient" x1="100%" y1="100%">
+								<stop offset="0%" stop-color="lightblue" stop-opacity=".5">
+									<animate attributeName="stop-color"
+										values="lightblue;blue;red;red;black;red;red;purple;lightblue" dur="14s"
+										repeatCount="indefinite" />
+								</stop>
+								<stop offset="100%" stop-color="lightblue" stop-opacity=".5">
+									<animate attributeName="stop-color"
+										values="lightblue;orange;purple;purple;black;purple;purple;blue;lightblue"
+										dur="14s" repeatCount="indefinite" />
+									<animate attributeName="offset" values=".95;.80;.60;.40;.20;0;.20;.40;.60;.80;.95"
+										dur="14s" repeatCount="indefinite" />
+								</stop>
+							</linearGradient>
+						</defs>
+					</svg>
 				</a>
 				<!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
 			</h1>
+			<img src="images/fcc-logo-white.png" alt="Fostering Connected Community Logo" class="fcc-logo"/>
 		</header>
 
 	</div>
@@ -91,6 +94,7 @@
 				<h1>Fostering a Connected Community: A Project for Digital Justice</h1>
 				<h2>Goal: To ensure that every member of our community in the region has the devices needed to access
 					the internet.</h2>
+				<h2>Plan: To encourage and enable informal donations of personal spare devices to those who need it by creating a network and process for sharing.</h2>
 				<p>In the 21st Century, access to the internet and the devices to use it are essential for survival and
 					success. The recent crisis has highlighted the disproportionate impact of the existing digital
 					inequity on our marginalized and vulnerable populations, and the urgent need for a remedy.</p>
@@ -104,7 +108,8 @@
 
 				<h3>How to get involved</h3>
 				<p>
-					<a href="get-involved.html">Here are some ways</a> you can participate in and support the project. And we’re open to
+					<a href="get-involved.html">Here are some ways</a> you can participate in and support the project.
+					And we’re open to
 					suggestions and new ideas so please let us know how else you might contribute.
 				</p>
 				<p>
@@ -112,9 +117,12 @@
 					out the forms below:
 				</p>
 				<ul>
-					<li><a href="https://forms.gle/GZeWGpe8moZp48688" target='_blank' rel='noopener'>as a volunteer/organizer</a></li>
-					<li><a href="https://forms.gle/GZeWGpe8moZp48688" target='_blank' rel='noopener'>to donate devices</a></li>
-					<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVqtBoPquVchfqs-HWl2PjTcuUjYCp6w9ZzD-vsF7TNyA2Fw/viewform" target='_blank' rel='noopener'>to request devices</a></li>
+					<li><a href="https://forms.gle/GZeWGpe8moZp48688" target='_blank' rel='noopener'>as a
+							volunteer/organizer</a></li>
+					<li><a href="https://forms.gle/ufVqkb9keLGSGxTG8" target='_blank' rel='noopener'>to donate
+							devices</a></li>
+					<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVqtBoPquVchfqs-HWl2PjTcuUjYCp6w9ZzD-vsF7TNyA2Fw/viewform"
+							target='_blank' rel='noopener'>to request devices</a></li>
 				</ul>
 
 				<p>Please review the <a href="devices.html">types/specs of devices that we need/will collect.</a></p>
@@ -127,7 +135,10 @@
 				<p>Contact <a href="mailto:hello@ceti.institute?subject=device sharing">hello@ceti.institute</a></p>
 
 				<h3>Donations of Funds: </h3>
-				<p>We would be grateful for any contributions to support the project --- for needed materials and logistics. CETI is a registered nonprofit  501(c)(3) organisation (ein - 84-3427418) and contributions to this project qualify as a tax-deductible charitable donation.  Please contact <a href="mailto:nandini@ceti.institute">nandini@ceti.institute</a> for more details.
+				<p>We would be grateful for any contributions to support the project --- for needed materials and
+					logistics. CETI is a registered nonprofit 501(c)(3) organisation (ein - 84-3427418) and
+					contributions to this project qualify as a tax-deductible charitable donation. Please contact <a
+						href="mailto:nandini@ceti.institute">nandini@ceti.institute</a> for more details.
 				</p>
 
 				<h3>Partners and Sponsors</h3>
@@ -137,80 +148,21 @@
 				<p>All participants (including but not limited to organizers, donors, volunteers, recipients), ... in
 					this project agree to abide by CETI’s Code of Conduct as well as the Contract/Agreement for
 					Participants.</p>
-
-
-
 			</div>
 
 		</section>
-		<!--<section class="about">
-			<div>
-				<h2>About CETI: A Creative and Emergent Technology Institute</h2>
+	</main>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="js/device-sharing.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-				<p>CETI offers a vision for an inclusive path of lifelong learning and professional development,
-					supporting a diverse and interdisciplinary community of practitioners, professionals, educators,
-					students, and researchers to successfully create the future. Through a carefully woven tapestry of
-					workshops, institutes, participatory research, projects, convenings, and actions, we inspire our
-					community to create imaginative and impactful responses to emergent social and technological
-					challenges.</p>
-				<a class="button popup-with-form" href="#subscribe-form" data-effect="mfp-zoom-in">Join Our Mailing
-					List</a>
-			</div>
-		</section>
-
-		<section class="contributors">
-			<p>The design, development, visuals, and branding for CETI were created by the following contributors:
-				Hilary Tsai, Nyssa Oru, Stephen Lee, Mike Heavers, Alanna Risse, Scott Garner, and Sparkman.</p>
-		</section>
-		<div id="subscribe-form" class="white-popup-block mfp-hide">
-			<link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-			<div id="mc_embed_signup">
-				<form
-					action="https://institute.us15.list-manage.com/subscribe/post?u=01995859ca60a242158eb0eaf&amp;id=2404c39c03"
-					method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-					target="_blank" novalidate>
-					<div id="mc_embed_signup_scroll">
-						<h2>Subscribe</h2>
-						<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-						<div class="mc-field-group">
-							<label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
-							</label>
-							<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-						</div>
-						<div class="mc-field-group">
-							<label for="mce-FNAME">First Name </label>
-							<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-						</div>
-						<div class="mc-field-group">
-							<label for="mce-LNAME">Last Name </label>
-							<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-						</div>
-						<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div>
-						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-								name="b_01995859ca60a242158eb0eaf_2404c39c03" tabindex="-1" value=""></div>
-						<div class="clear"><input type="submit" value="Subscribe" name="subscribe"
-								id="mc-embedded-subscribe" class="button"></div>
-					</div>
-				</form>
-			</div>
-			-->
-		</main>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="libraries/magnific/jquery.magnific-popup.min.js"></script>
-		<script src="libraries/parallax/parallax.min.js"></script>
-		<script src="js/script.js"></script>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() { dataLayer.push(arguments); }
-			gtag('js', new Date());
-
-			gtag('config', 'G-CSLJ4LHBM2');
-		</script>
+		gtag('config', 'G-CSLJ4LHBM2');
+	</script>
 </body>
 
 </html>
