--- a/device-sharing/devices.html
+++ b/device-sharing/devices.html
@@ -13,8 +13,6 @@
         content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="libraries/magnific/magnific-popup.css">
-
     <title>Ceti: A Creative and Emergent Technology Institute</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="css/fcc.css">
@@ -45,37 +43,38 @@
             <h1 id="logo">
                 <a href="/index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 408.265 408.265">
-                    <title>CETI Institute</title>
-                    <path
-                        d="M274.031,273.752c31.27-13.766,72.822-18.308,180.485-23.648-107.663-5.339-149.215-9.881-180.485-23.647-13.766-31.27-18.308-72.822-23.648-180.485-5.339,107.663-9.881,149.215-23.647,180.485-31.27,13.766-72.822,18.308-180.485,23.647,107.663,5.34,149.215,9.882,180.485,23.648,13.766,31.27,18.308,72.822,23.647,180.485C255.723,346.574,260.265,305.022,274.031,273.752Z"
-                        transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-                    <path d="M107.824,327.02h-45.5V298.214H187.678V327.02h-45.5V450H107.824Z"
-                        transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-                    <path
-                        d="M322.378,421.2h35.445V327.02H322.378V298.214H427.622V327.02H392.177V421.2h35.445V450H322.378Z"
-                        transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-                    <path
-                        d="M64.943,126.5c0-50.322,31.842-79.528,72.511-79.528,19.241,0,35.025,9.187,45.286,19.305L163.829,87.529c-7.247-6.7-15.414-10.885-26.375-10.885-21.552,0-37.291,18.315-37.291,48.718,0,31.2,15.739,49.314,38.635,49.314,10.95,0,19.984-5.384,27.349-13.41l18.91,20.787c-12.383,14.646-29.371,22.294-49.8,22.294C97.521,204.347,64.943,177.689,64.943,126.5Z"
-                        transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-                    <path d="M323.528,49.766H424.143V78.572H357.882v30.439h56.3v28.8h-56.3v34.933h68.59v28.8H323.528Z"
-                        transform="translate(-46.251 -45.972)" fill="url(#skyGradient)" />
-                    <defs>
-                        <linearGradient id="skyGradient" x1="100%" y1="100%">
-                            <stop offset="0%" stop-color="lightblue" stop-opacity=".5">
-                                <animate attributeName="stop-color"
-                                    values="lightblue;blue;red;red;black;red;red;purple;lightblue" dur="14s"
-                                    repeatCount="indefinite" />
-                            </stop>
-                            <stop offset="100%" stop-color="lightblue" stop-opacity=".5">
-                                <animate attributeName="stop-color"
-                                    values="lightblue;orange;purple;purple;black;purple;purple;blue;lightblue" dur="14s"
-                                    repeatCount="indefinite" />
-                                <animate attributeName="offset" values=".95;.80;.60;.40;.20;0;.20;.40;.60;.80;.95"
-                                    dur="14s" repeatCount="indefinite" />
-                            </stop>
-                        </linearGradient>
-                    </defs>
-                </svg>
+                        <title>CETI Institute</title>
+                        <path
+                            d="M274.031,273.752c31.27-13.766,72.822-18.308,180.485-23.648-107.663-5.339-149.215-9.881-180.485-23.647-13.766-31.27-18.308-72.822-23.648-180.485-5.339,107.663-9.881,149.215-23.647,180.485-31.27,13.766-72.822,18.308-180.485,23.647,107.663,5.34,149.215,9.882,180.485,23.648,13.766,31.27,18.308,72.822,23.647,180.485C255.723,346.574,260.265,305.022,274.031,273.752Z"
+                            transform="translate(-46.251 -45.972)" fill="url(#fccGradient)" />
+                        <path d="M107.824,327.02h-45.5V298.214H187.678V327.02h-45.5V450H107.824Z"
+                            transform="translate(-46.251 -45.972)" fill="url(#fccGradient)" />
+                        <path
+                            d="M322.378,421.2h35.445V327.02H322.378V298.214H427.622V327.02H392.177V421.2h35.445V450H322.378Z"
+                            transform="translate(-46.251 -45.972)" fill="url(#fccGradient)" />
+                        <path
+                            d="M64.943,126.5c0-50.322,31.842-79.528,72.511-79.528,19.241,0,35.025,9.187,45.286,19.305L163.829,87.529c-7.247-6.7-15.414-10.885-26.375-10.885-21.552,0-37.291,18.315-37.291,48.718,0,31.2,15.739,49.314,38.635,49.314,10.95,0,19.984-5.384,27.349-13.41l18.91,20.787c-12.383,14.646-29.371,22.294-49.8,22.294C97.521,204.347,64.943,177.689,64.943,126.5Z"
+                            transform="translate(-46.251 -45.972)" fill="url(#fccGradient)" />
+                        <path
+                            d="M323.528,49.766H424.143V78.572H357.882v30.439h56.3v28.8h-56.3v34.933h68.59v28.8H323.528Z"
+                            transform="translate(-46.251 -45.972)" fill="url(#fccGradient)" />
+                        <defs>
+                            <linearGradient id="fccGradient" x1="100%" y1="100%">
+                                <stop offset="0%" stop-color="white" stop-opacity=".8">
+                                    <animate attributeName="stop-color"
+                                        values="white;lime green;teal;teal;silver;forestGreen;forestGreen;dark-blue;white" dur="14s"
+                                        repeatCount="indefinite" />
+                                </stop>
+                                <stop offset="100%" stop-color="white" stop-opacity=".8">
+                                    <animate attributeName="stop-color"
+                                        values="white;mustard;darkblue;darkblue;silver;darkblue;darkblue;iceberg;white"
+                                        dur="14s" repeatCount="indefinite" />
+                                    <animate attributeName="offset" values=".95;.80;.60;.40;.20;0;.20;.40;.60;.80;.95"
+                                        dur="14s" repeatCount="indefinite" />
+                                </stop>
+                            </linearGradient>
+                        </defs>
+                    </svg>
                 </a>
                 <!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
             </h1>
