added new title

--- a/device-sharing/devices.html
+++ b/device-sharing/devices.html
@@ -87,7 +87,7 @@
 
         <section class="device-share1">
             <div>
-                <h1>Fostering a Connected Community: A Project for Digital Justice</h1>
+                <h1>Fostering a Connected Community: Device Sharing for Digital Access</h1>
                 <h2>Devices Needed</h2>
                 <p><strong>Dear Donor,</strong></p>
                 <p>Thank you so much for considering donations of your spare devices.  </p>
