--- a/device-sharing/get-involved.html
+++ b/device-sharing/get-involved.html
@@ -87,7 +87,7 @@
 
         <section class="device-share1">
             <div>
-                <h1>Fostering a Connected Community: A Project for Digital Justice</h1>
+                <h1>Fostering a Connected Community: Device Sharing for Digital Access</h1>
                 <h2>Get Involved</h2>
                 <h3>Who is this FCC: Device-Sharing Project for?</h3>
                 <p>The success of this project depends on creating a broad collaborative network of conors, recipients,
