--- a/device-sharing/index.html
+++ b/device-sharing/index.html
@@ -89,7 +89,7 @@
 
 		<section class="device-share1">
 			<div>
-				<h1>Fostering a Connected Community: A Project for Digital Justice</h1>
+				<h1>Fostering a Connected Community: Device Sharing for Digital Access</h1>
 				<h2>Goal: To ensure that every member of our community in the region has the devices needed to access
 					the internet.</h2>
 				<h2>Plan: To encourage and enable informal donations of personal spare devices to those who need it by creating a network and process for sharing.</h2>
