--- a/device-sharing/index.html
+++ b/device-sharing/index.html
@@ -93,10 +93,10 @@
 				<h2>Goal: To ensure that every member of our community in the region has the devices needed to access
 					the internet.</h2>
 				<h2>Plan: To encourage and enable informal donations of personal spare devices to those who need it by creating a network and process for sharing.</h2>
-				<p>In the 21st Century, access to the internet and the devices to use it are essential for survival and success. The recent crisis has highlighted the disproportionate impact of the existing digital inequity on our marginalized and vulnerable populations, and the urgent need for a remedy.</p>
+				<!-- <p>In the 21st Century, access to the internet and the devices to use it are essential for survival and success. The recent crisis has highlighted the disproportionate impact of the existing digital inequity on our marginalized and vulnerable populations, and the urgent need for a remedy.</p>
 
 				<p>We also live in a region with a thriving collaborative and creative community in technology, design, and innovation. We’d like to leverage that by creating an informal process and network to donate/share our spare functioning devices. We will be quick and scrappy - getting these devices into the hands of those who need it as quickly as possible. We need your participation to ensure the project is impactful and inclusive.
-				</p>
+				</p> -->
 			</div>
 		</section>
 		<section class="device-share2">
