--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -95,9 +95,9 @@
 
 				<h4>More details about the project:</h4>
 
-				<p>To partner/collaborate with us or help sponsor the project, contact us at hello@ceti.institute.</p>
+				<p>To partner/collaborate with us or help sponsor the project, contact us at <a href="mailto:hello@ceti.institute?subject=interested in participating in gallery of the future">hello@ceti.institute</a>.</p>
 
-				<a href="#" class="btn yellow">Sign Up</a> <a href="#" class="btn pink">Resources</a>
+				<a href="#" class="btn pink">Sign Up</a> <a href="#" class="btn pink">Resources</a>
 			</div>
 		</section>
 		<section class="light" id="participants">
