added sign up link

--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -97,7 +97,8 @@
 
 				<p>To partner/collaborate with us or help sponsor the project, contact us at <a href="mailto:hello@ceti.institute?subject=interested in participating in gallery of the future">hello@ceti.institute</a>.</p>
 
-				<a href="#" class="btn pink">Sign Up</a> <a href="#" class="btn pink">Resources</a>
+				<a href="https://www.eventbrite.com/e/ceti-gallery-of-the-future-prototype-i-creative-jam-tickets-113379091916" class="btn pink">Sign Up</a> 
+				<a href="#" class="btn pink">Resources</a>
 			</div>
 		</section>
 		<section class="light" id="participants">
