added new logo to rest of site

--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -83,7 +83,7 @@
 			<section class="gof" id="p1">
 			<figure><img src="images/heros/gof2.png" alt="Gallery of the Future"></figure>
 			<div>
-				<h2>Prototype/Experiment 1</h2>
+				<h2 style="white-space:nowrap;">Prototype/Experiment 1</h2>
 				<h3>Gallery Prototype I: Summer/Fall 2020</h3>
 
 				<h4>Theme</h4>
@@ -97,7 +97,7 @@
 
 				<p>To partner/collaborate with us or help sponsor the project, contact us at <a href="mailto:hello@ceti.institute?subject=interested in participating in gallery of the future">hello@ceti.institute</a>.</p>
 
-				<a href="https://www.eventbrite.com/e/ceti-gallery-of-the-future-prototype-i-creative-jam-tickets-113379091916" class="btn pink">Sign Up</a> 
+				<a href="https://www.eventbrite.com/e/ceti-gallery-of-the-future-prototype-i-creative-jam-tickets-113379091916" target="_blank" class="btn pink">Sign Up</a> 
 				<a href="#" class="btn pink">Resources</a>
 			</div>
 		</section>
