--- a/index.html
+++ b/index.html
@@ -20,42 +20,41 @@
         </div>
         <div class="menu-mobile">
             <a href="index.html">Home</a>
-<!--             <a href="blog/index.html">Blog</a>
- -->            <a href="wlf2020/index.html">Winter Lights Festival</a>
+            <a href="gallery-of-the-future/index.html">Gallery of the Future</a>
+            <a href="wlf2020/index.html">Winter Lights Festival</a>
  				<a href="/device-sharing/index.html">Device Sharing</a>
         </div>
     </nav>
     <nav class="desktop">
         <div class="menu-desktop">
-            <a href="/index.html">Home</a>
-<!--             <a href="blog/index.html">Blog</a>
- -->            <a href="wlf2020/index.html">Winter Light Festival</a>
-				 <a href="/device-sharing/index.html">Device Sharing</a>
+					<a href="gallery-of-the-future/index.html">Gallery of the Future</a>
+					<a href="wlf2020/index.html">Winter Light Festival</a>
+				 	<a href="/device-sharing/index.html">Device Sharing</a>
 				 
         </div>
     </nav>
 	<div class="hero">
 		<header class="branding">
 		<h1 id="logo">
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 408.265 408.265">
-  <title>CETI Institute</title>
-  <path d="M274.031,273.752c31.27-13.766,72.822-18.308,180.485-23.648-107.663-5.339-149.215-9.881-180.485-23.647-13.766-31.27-18.308-72.822-23.648-180.485-5.339,107.663-9.881,149.215-23.647,180.485-31.27,13.766-72.822,18.308-180.485,23.647,107.663,5.34,149.215,9.882,180.485,23.648,13.766,31.27,18.308,72.822,23.647,180.485C255.723,346.574,260.265,305.022,274.031,273.752Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
-  <path d="M107.824,327.02h-45.5V298.214H187.678V327.02h-45.5V450H107.824Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
-  <path d="M322.378,421.2h35.445V327.02H322.378V298.214H427.622V327.02H392.177V421.2h35.445V450H322.378Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
-  <path d="M64.943,126.5c0-50.322,31.842-79.528,72.511-79.528,19.241,0,35.025,9.187,45.286,19.305L163.829,87.529c-7.247-6.7-15.414-10.885-26.375-10.885-21.552,0-37.291,18.315-37.291,48.718,0,31.2,15.739,49.314,38.635,49.314,10.95,0,19.984-5.384,27.349-13.41l18.91,20.787c-12.383,14.646-29.371,22.294-49.8,22.294C97.521,204.347,64.943,177.689,64.943,126.5Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
-  <path d="M323.528,49.766H424.143V78.572H357.882v30.439h56.3v28.8h-56.3v34.933h68.59v28.8H323.528Z" transform="translate(-46.251 -45.972)" fill="url(#skyGradient)"/>
-			<defs>
-				    <linearGradient id="skyGradient" x1="100%" y1="100%">
-				      <stop offset="0%" stop-color="lightblue" stop-opacity=".5">
-				        <animate attributeName="stop-color" values="lightblue;blue;red;red;black;red;red;purple;lightblue" dur="14s" repeatCount="indefinite" />
-				      </stop>
-				      <stop offset="100%" stop-color="lightblue" stop-opacity=".5">
-				        <animate attributeName="stop-color" values="lightblue;orange;purple;purple;black;purple;purple;blue;lightblue" dur="14s" repeatCount="indefinite" />
-				        <animate attributeName="offset" values=".95;.80;.60;.40;.20;0;.20;.40;.60;.80;.95" dur="14s" repeatCount="indefinite" />
-				      </stop>
-				    </linearGradient>
-				</defs>
-			</svg>
+			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 320" enable-background="new 0 0 400 320" xml:space="preserve">
+					<g>
+						<path fill="#505555" d="M111.596,200.108c0-26.433,16.726-41.775,38.088-41.775c10.107,0,18.398,4.826,23.788,10.141
+							l-9.933,11.163c-3.807-3.522-8.097-5.717-13.855-5.717c-11.321,0-19.588,9.62-19.588,25.591c0,16.391,8.267,25.903,20.294,25.903
+							c5.752,0,10.497-2.828,14.366-7.043l9.933,10.918C168.185,236.983,159.261,241,148.529,241
+							C128.709,241,111.596,226.997,111.596,200.108z"/>
+						<path fill="#505555" d="M187.224,159.802h52.851v15.131h-34.806v15.989h29.571v15.131h-29.571v18.349h36.029v15.131h-54.075
+							L187.224,159.802L187.224,159.802z"/>
+						<path fill="#505555" d="M274.564,174.932h-23.901v-15.131h65.847v15.131H292.61v64.599h-18.046V174.932z"/>
+						<path fill="#505555" d="M326.904,224.401h18.619v-49.468h-18.619v-15.131h55.282v15.131h-18.619v49.468h18.619v15.131h-55.282
+							L326.904,224.401L326.904,224.401z"/>
+					</g>
+					<path fill="#E5450A" d="M85.072,159.793H31.628c-7.261,0-13.147,5.886-13.147,13.147v53.444c0,7.261,5.886,13.147,13.147,13.147
+						h53.444c7.261,0,13.147-5.886,13.147-13.147V172.94C98.218,165.678,92.333,159.793,85.072,159.793z M58.349,234.965
+						c0-0.581-0.016-1.151-0.034-1.719h0.064C58.361,233.813,58.349,234.385,58.349,234.965z"/>
+					<path fill="#FFFFFF" d="M58.452,164.966h-0.204c-0.727,29.088-5.506,33.867-34.594,34.594v0.204
+						c29.088,0.726,33.867,5.506,34.594,34.594h0.204c0.727-29.088,5.506-33.867,34.594-34.594v-0.204
+						C63.958,198.833,59.179,194.053,58.452,164.966z"/>
+				</svg>
 			<!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
 		</h1>
 	</header>
