added google verification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Source+Code+Pro:400,600,700&display=swap" rel="stylesheet">
 	<meta name="description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future.">
 	<meta name="keywords" content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges">
+	<meta name="google-site-verification" content="lsFy-jKaLYByosP6iA9x9Qd0sLEdZp8K1qESxYYe9cM" />
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="libraries/magnific/magnific-popup.css">
@@ -19,7 +20,6 @@
             <div class="hamburger"></div>
         </div>
         <div class="menu-mobile">
-            <a href="index.html">Home</a>
             <a href="gallery-of-the-future/index.html">Gallery of the Future</a>
             <a href="wlf2020/index.html">Winter Lights Festival</a>
  				<a href="/device-sharing/index.html">Device Sharing</a>
