added purple hero, need to do more sizing pixes

--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -81,7 +81,7 @@
 				</p>
 			</div>
 			<section class="gof" id="p1">
-			<figure><img src="images/heros/gof2.png" alt="Gallery of the Future"></figure>
+			<figure><img src="images/heros/gallery-of-the-future-2.gif" alt="Gallery of the Future"></figure>
 			<div>
 				<h2 style="white-space:nowrap;">Prototype/Experiment 1</h2>
 				<h3>Gallery Prototype I: Summer/Fall 2020</h3>
