added nandini and i to project leads

--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -77,7 +77,7 @@
 
 				<p>The exhibitions/conversations/creations that activate these spaces will focus on reimagining - destroying, repurposing, and rebuilding systems, objects, places, and structures, to envision a future that is equitable, community-focussed, and inspiring.</p>
 				 
-				<p><strong>Project Leads:</strong> Marin Vesely, Scott Nieradka, Hilary Tsai, Stephen Lee, Brenda Trammell, Joseph Wells, Jesse England, Dan Fernie-Harper
+				<p><strong>Project Leads:</strong> Marin Vesely, Scott Nieradka, Hilary Tsai, Stephen Lee, Brenda Trammell, Joseph Wells, Jesse England, Dan Fernie-Harper, Nandini Ranganathan, and Alanna Risse.
 				</p>
 			</div>
 			<section class="gof" id="p1">
