added open call

--- a/open-call/index.html
+++ b/open-call/index.html
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../gallery-of-the-future/style.css">
   <meta property="og:title" content="Ceti Institute">
   <meta property="og:description" content="CETI Institute offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future.">
   <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png">
@@ -47,7 +47,7 @@
           <div class="hamburger">Projects</div>
       </div>
       <div class="menu-mobile">
-         <a href="index.html" disabled>Gallery of the Future</a>
+         <a href="../gallery-of-the-future/index.html">Gallery of the Future</a>
         <a href="../wlf2020/index.html">Winter Lights Festival</a>
 			<a href="../device-sharing/index.html">Device Sharing</a>
       </div>          
@@ -55,9 +55,9 @@
 	</header>
 	<main>
 		<section class="gof" id="intro">
-			<figure><img src="images/heros/gof1.png" alt="Gallery of the Future"></figure>
+			<figure><img src="../gallery-of-the-future/images/heros/gof1.png" alt="Gallery of the Future"></figure>
 			<div>
-			<h1>Gallery of the Future</h1>
+			<h1>Open Call: System Failure, Please Restart</h1>
 			<h3>Calling all artists, technologists, architects, designers, hackers, and performers</h3>
 			</div>
 			<nav>
@@ -69,52 +69,72 @@
 		</section>
 		<section class="light" id="details">
 			<div>
-				<p>As the world is transformed by pandemics and revolutions, as physical spaces, access, and connection is lost, we reimagine the gallery spaces of the future. What could it look like? How can the art, the space, and the conversations and interactions critically engage with the world and with our communities? How does it spark and sustain inspiration - with ideas, materials, and media? How does it reveal what is possible, and what needs to change?</p>
+				<article class="two-col">
+					<div>
 
-				<p>We imagine an evolving space, changing in response to community needs and technology/media innovations.  A space created by artists, technologists, and communities together - a space to collaboratively experiment, learn, play, engage, and create.</p>
 
-				<p>CETI will convene groups of artists, technologists, theorists, and community members to create prototypes of future galleries; and launch exhibitions and dialogues to reimagine what co-created  inclusive, accessible, virtual gallery spaces might/should reveal about our world and what it might become.</p>
+<p>CETI is delighted to launch an open call
+inviting artists to submit works as part
+of the inaugural group exhibition System
+Failure. Please Restart.</p>
 
-				<p>The exhibitions/conversations/creations that activate these spaces will focus on reimagining - destroying, repurposing, and rebuilding systems, objects, places, and structures, to envision a future that is equitable, community-focussed, and inspiring.</p>
+<p>Our systems, structures, objects
+and places are built within an ongoing
+chain of bias and inequality. This call
+asks artists to dismantle and reinvent an
+object or societal structure through their
+chosen medium, to design for justice, for
+non-violence, for community--to help us
+reimagine and create a more hopeful,
+equitable future.</p>
+<p>The works will be displayed in the
+new CETI Gallery of the Future (a virtual
+social gallery space), a space designed for
+exhibition and for visitors and artists to
+interact and engage. The gallery space in
+this edition (built with Mozilla Hubs) takes
+shape as an abandoned mall, with our
+collaborative reimagined future works as
+its remnants.</p>
+<p>We invite works in a broad range of
+media (see details). We also invite
+artists to create their own “hub” in Mozilla
+Hubs and submit it to be linked to our
+gallery.</p>
+<p>Please reach out with questions about
+the project or how your work can be
+included, or for (technical or other) support
+at galleryofthefuture@ceti.institute.</p>
+</div>
+
+<div>
+
+<p>Please <a href="https://docs.google.com/forms/d/e/1FAIpQLScrXumhPFXDoejlO961lfxPnrK24MyZlpP8hPNAY4Qc0eRYqA/viewform" target="_blank">submit your application</a> to
+be included in the exhibition by 6pm
+<strong>September 15, 2020</strong></p>
+
+<h4>Exhibition Dates:<br>
+October 8 - October 30th, 2020<br><br>
+Exhibition Reception:<br>
+6pm. October 8, 2020</h4>
+<br><br>
+<p><strong>Accepted media:</strong> Media arts (including photo, video, animation, film, sound, music, Creative tech (3d
+models of spaces, games, web art, AR, VR, web-based interactive installations, etc), Performance (recorded
+video, live-stream), 2D art (paintings, illustrations, graphic arts, text-based art), Printmaking/Bookmaking
+(digitized prints, books), Murals (photographed/ digitized /digital sketch), Sculpture (3D modeled/scanned),
+Protest Art (graffiti, posters, 3D scans, images, sound etc), Installation Art (3D modeled or represented
+digitally)</p>
+<p><strong>File types:</strong> 3D (.glb), sketchfab (or .obj files w/ textures), 2D (no larger than 3MB, .jpg, .png), av,
+animation, performance (.mp3, .mp4, .mpeg, .wav, gif, ask 128MB limit), games (downloadable), live twitch /
+streaming channels, websites (url & provide cover image/ gif)</p>
+</div>
+</article>
 				 
 				<p><strong>Project Leads:</strong> Marin Vesely, Scott Nieradka, Hilary Tsai, Stephen Lee, Brenda Trammell, Joseph Wells, Jesse England, Dan Fernie-Harper, Nandini Ranganathan, and Alanna Risse.
 				</p>
 			</div>
-			<section class="gof" id="p1">
-			<figure><img src="images/heros/gallery-of-the-future-2.gif" alt="Gallery of the Future"></figure>
-			<div>
-				<h2 style="white-space:nowrap;">Prototype/Experiment 1</h2>
-				<h3>Gallery Prototype I: Summer/Fall 2020</h3>
-
-				<h4>Theme</h4>
-				<p>Our first gallery iteration will be an "abandoned mall", open to creative interpretations, both literal and abstract.  This might conjure up feelings of ruin and desolation--particularly in the wake of social distancing and forsaken retail shops.  Or suggest that old systems focussed on constant consumption and material use are obsolete and need to be repurposed/re-created.</p>
-
-				<p>We will create this prototype through an experimental collaborative virtual creative jam.  In August, through sprints and build sessions, we will brainstorm, form teams, experiment, prototype and test, culminating in a final Gallery of the Future open for public viewing, and ready for exhibitions.</p>
-				  
-				<p>To join the creative jam/design-build session (starting on August 5, 2020) for the first prototype, sign up here.</p>
-
-				<h4>More details about the project:</h4>
-
-				<p>To partner/collaborate with us or help sponsor the project, contact us at <a href="mailto:hello@ceti.institute?subject=interested in participating in gallery of the future">hello@ceti.institute</a>.</p>
-
-				<a href="https://www.eventbrite.com/e/ceti-gallery-of-the-future-prototype-i-creative-jam-tickets-113379091916" target="_blank" class="btn pink">Sign Up</a> 
-			</div>
-		</section>
-		<section class="light" id="participants">
-			<div>
-				<h3>Participants for the Design-Build for Prototype I:</h3>
-				<p>Coming soon!</p>
-			</div>
-			<div>
-				<h3>Sponsors</h3>
-				<p>Coming soon!</p>
-				<a href="mailto:nandini@ceti.institute?subject=gallery of the future sponsorship" class="btn">Become a Sponsor</a>
-			</div>
-			<div>
-				<h3>Code of Conduct/Agreement</h3>
-				<p>All participants (including but not limited to organizers, donors, volunteers, recipients) in this project agree to abide by CETI’s Code of Conduct as well as the <a href="https://docs.google.com/document/d/1JtNCIvxhhIJV5qav-BQsP0WRljAPQRi8vtfIENG9Bm8/edit?usp=sharing" target="_blank">Contract/Agreement</a> for participants.</p>
-			</div>
-		</section>
+			
+		
 		
 	</main>
 	<footer id="contact">
