added mobile and links

--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CETI | Gallery of the Future</title>
+	<title>CETI | Open Call for Art</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style">
@@ -62,7 +62,7 @@
 			</div>
 			<nav>
 				<ul class="subnav">
-					<li><a href="/open-call">Open Call for Art!</a></li><li><a href="#p1">Prototype/Experiment 1</a></li>
+					<li><a href="../open-call/index.html">Open Call for Art!</a></li><li><a href="#p1">Prototype/Experiment 1</a></li>
 					<li><a href="#participants">Participants</a></li>
 				</ul>
 			</nav>
