--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<div class="hamburger"></div>
 			</div>
 			<div class="menu-mobile">
+				<a href="open-call/index.html">Open Call</a>
 				<a href="gallery-of-the-future/index.html">Gallery of the Future</a>
 				<a href="wlf2020/index.html">Winter Lights Festival</a>
 				<a href="/device-sharing/index.html">Device Sharing</a>
@@ -26,6 +27,7 @@
 		</nav>
 		<nav class="desktop">
 			<div class="menu-desktop">
+				<a href="open-call/index.html">Open Call</a>
 				<a href="gallery-of-the-future/index.html">Gallery of the Future</a>
 				<a href="wlf2020/index.html">Winter Light Festival</a>
 				<a href="/device-sharing/index.html">Device Sharing</a>
