added open call button to homepage

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<h2>Gallery of the Future</h2>
 									<p>As the world is transformed by pandemics and revolutions, as physical spaces, access, and connection is lost, we reimagine the gallery spaces of the future.  What could it look like?  How can the art, the space, and the conversations and interactions critically engage with the world and with our communities?  How does it spark and sustain inspiration - with ideas, materials, and media? How does it reveal what is possible, and what needs to change?</p>
 									<p>We imagine an evolving space, changing in response to community needs and technology/media innovations.  A space created by artists, technologists, and communities together - a space to collaboratively experiment, learn, play, engage, and create.</p>
-									<a href="gallery-of-the-future/index.html" class="button pink">Find Out More</a>
+									<a href="open-call/index.html" class="button pink">Open Call for Art</a> <a href="gallery-of-the-future/index.html" class="button pink">Find Out More</a>
 								</div>
 							</section>
 							<section class="wlf-link">
