removed project leads

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									</div>
 									<div>
 										<h4>DATE</h4>
-										<p>February 6</p>
+										<p>February 6, 2020</p>
 									</div>
 									<div>
 										<h4>TIME</h4>
