new hero for gof

--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -83,7 +83,7 @@
 			</div>
 		</section>
 		<section class="gof" id="opencall">
-			<figure><img src="images/heros/gallery-of-the-future-2.gif" alt="Gallery of the Future"></figure>
+			<figure><img src="images/heros/gof3.png" alt="Gallery of the Future"></figure>
 			<div>
 				<h2 style="white-space:nowrap;">Open Call for our first exhibition </h2>
 				<h3>System failure, Please Restart</h3>
