--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -123,7 +123,34 @@
 			
 			<div>
 				<h3>Participants for the Design-Build for Prototype I:</h3>
-				<p>Coming soon!</p>
+<article class="three-col">
+<p>Alan Page<br>
+Alanna Risse<br>
+Alex Hessler<br>
+Brenda Trammell<br>
+Catherine Ross<br>
+Dan Fernie-Harper<br>
+Gutje Woortmann<br>
+Hilary Tsai<br>
+Jesse England</p>
+
+<p>Joey Wells<br>
+Josie J<br>
+Marin Vesely<br>
+Max Ettel<br>
+Miguel Higgins Moy<br>
+Mike Baran<br>
+Monica McGrane</p>
+
+<p>Nandini Ranganathan<br>
+Nikki Sato<br>
+Roy Trammell<br>
+Scott Nieradka<br>
+Shannon O' Brien<br>
+Stephen Lee<br>
+Zack Marlow McCarthy
+</p>
+</article>
 			</div>
 			<div>
 				<h3>Code of Conduct/Agreement</h3>
