mobile fixes and typos

--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -85,7 +85,7 @@
 							<figure><img src="images/heros/gof3.png" alt="Gallery of the Future"></figure>
 							<div>
 								<h2>Open Call for our first exhibition:<br>
-								<span class="subhead">System failure, Please Restart</span></h2>
+								<span class="subhead">System Failure. Please Restart</span></h2>
 								<p>Calling all artists: dismantle/reimagine an object or societal structure - for justice, for non-violence, for community!</p>
 								<br>
 								<p>Submission deadline: September 15th, 2020.<br>
